--- a/tommyDay24/4-判断奇偶数.html
+++ b/tommyDay24/4-判断奇偶数.html
@@ -10,5 +10,10 @@
 <script type="text/javascript">
 // 判断一个整数是偶数还是奇数，并输出判断结果
 var num = prompt("请输入一个整数：");
+if (num%2 === 0){
+    alert('this is even')
+}else {
+    alert('this is odd')
+}
 </script>
 </html>
