--- a/tommyDay24/8-判断水仙花数.html
+++ b/tommyDay24/8-判断水仙花数.html
@@ -10,5 +10,18 @@
 <script type="text/javascript">
 // 输入一个三位数，如果是水仙花数，输出YES，否则的话，输出NO;所谓的水仙花数是指 每一位的数字立方和等于这位数本身。例如 153 = 1^3+5^3+3^3
 var num = prompt('请输入三位正数：');
+num = parseInt(num)
+if(num >= 100 && num <= 999){
+    var h = parseInt(num / 100);
+    var t = parseInt((num / 10) % 10);
+    var s = parseInt(num % 10);
+   if(num == Math.pow(h,3) + Math.pow(t,3) + Math.pow(s,3) ){
+     alert('this is 水仙花')
+   }else {
+        alert('it is not ')
+   }
+}else {
+    alert('your got wrong')
+}
 </script>
 </html>
