--- a/tommyDay25/11-猴子摘桃.html
+++ b/tommyDay25/11-猴子摘桃.html
@@ -9,6 +9,11 @@
 </body>
 <script type="text/javascript">
 // 猴子偷桃，猴子摘了x个桃，每天吃一半，再多吃一个，第7天吃的时候剩下一个了，猴子摘了多少桃子？
-
+var n = 1;
+for(var day = 6; day >= 1 ; day--){
+    n = (n + 1)*2;
+    alert(n, day);
+}
+alert(n)
 </script>
 </html>
