--- a/tommyDay25/3-打印三角形.html
+++ b/tommyDay25/3-打印三角形.html
@@ -9,5 +9,11 @@
 </body>
 <script type="text/javascript">
 // 完成一个三角形打印功能
+for(var i = 1; i <= 6; i++){
+    for(var j = 1; j <= i ; j++){
+        document.write(' * ')
+    }
+    document.write('<br>')
+}
 </script>
 </html>
