--- a/tommyDay25/1-100以内的偶数和.html
+++ b/tommyDay25/1-100以内的偶数和.html
@@ -9,6 +9,12 @@
 </body>
 <script type="text/javascript">
 // 打印100以内所有偶数的和
-
+var sum = 0;
+for(var i = 1; i <= 100; i++){
+    if(i%2 == 0){
+        sum += i;
+    }
+}
+alert(sum)
 </script>
 </html>
