--- a/tommyDay25/2-打印所有闰年.html
+++ b/tommyDay25/2-打印所有闰年.html
@@ -9,5 +9,18 @@
 </body>
 <script type="text/javascript">
 // 打印出1000-2000年中所有的闰年，并以每行四个数的形式输出
+var year = 1000;
+var count = 0;
+for(var i = 1000; i <= 2000; i ++){
+    if(i%4 == 0 && year%100 != 0 || year%400 == 0){
+        document.write(year + '&nbsp')
+        count++
+        if(count%4 == 0){
+            document.write('<br>')
+        }
+    }
+    year++
+}
+
 </script>
 </html>
