--- a/tommyDay25/4-打印梯形.html
+++ b/tommyDay25/4-打印梯形.html
@@ -9,5 +9,11 @@
 </body>
 <script type="text/javascript">
 // 完成一个梯形打印功能
+for(var i = 3; i <= 6; i++){
+    for(var j = 1; j <= i; j++){
+        document.write("%")
+    }
+    document.write('<br>')
+}
 </script>
 </html>
