--- a/tommyDay25/5-分数的计算.html
+++ b/tommyDay25/5-分数的计算.html
@@ -9,6 +9,14 @@
 </body>
 <script type="text/javascript">
 //求出1 - 1/2 + 1/3 - 1/4 …..1/100的和 var i=1; 
-
+var res = 0;
+for(var i = 1; i < 2; i++ ){
+    if(i%2 == 0){
+        res -= 1/i;
+    }else{
+        res += 1/i;
+    }
+}
+alert(res)
 </script>
 </html>
