--- a/tommyDay25/6-求阶乘的和.html
+++ b/tommyDay25/6-求阶乘的和.html
@@ -9,5 +9,14 @@
 </body>
 <script type="text/javascript">
 // 求1+2!+3!+...+20!的值
+var n = 0;
+for(var i = 1; i <= 4 ; i++){
+    var k = 1 ;
+     for(var j = i; j >= 1; j--){
+         k *= j;
+     }
+     n += k;
+}
+alert(n)
 </script>
 </html>
