--- a/tommyDay26/1-求偶数个数.html
+++ b/tommyDay26/1-求偶数个数.html
@@ -8,15 +8,6 @@
 
 </body>
 <script type="text/javascript">
-// 求1+2!+3!+...+20!的值
-var n = 0;
-for(var i=1;i<=4;i++){
-    var k = 1;
-    for(var j=i;j>=1;j--){
-        k *= j;
-    }
-    n += k;
-}
-console.log(n);
+// 求1~n(n>=1)之间的所有偶数的个数
 </script>
 </html>
