--- a/tommyDay26/3-判断一个数是不是素数.html
+++ b/tommyDay26/3-判断一个数是不是素数.html
@@ -8,12 +8,6 @@
 
 </body>
 <script type="text/javascript">
-// 完成一个三角形打印功能
-for(var i=1;i<=6;i++){
-    for(var j=1;j<=i;j++){
-        document.write("*");
-    }
-    document.write("<br>");
-}
+// 判断一个数是否是素数
 </script>
 </html>
