--- a/tommyDay26/5-体重.html
+++ b/tommyDay26/5-体重.html
@@ -8,12 +8,6 @@
 
 </body>
 <script type="text/javascript">
-// 完成一个梯形打印功能
-for(var i=3;i<=6;i++){
-    for(var j=1;j<=i;j++){
-        document.write("*");
-    }
-    document.write("<br>");
-}
+// 标准体重：男士体重=身高-100±3      女士体重=身高-110±3。写个函数，输入身高、体重、性别，输出偏重、正常。
 </script>
 </html>
