--- a/tommyDay26/4-计算游戏分数.html
+++ b/tommyDay26/4-计算游戏分数.html
@@ -9,5 +9,17 @@
 </body>
 <script type="text/javascript">
 // 一个游戏，前20关是每一关自身的分数，21-30关每一关是10分31-40关，每一关是20分41-49关，每一关是30分,50关，是100分。输入你现在闯到的关卡数，求你现在拥有的分数
+
+function rounds(num){
+    var inpt = parseInt(prompt('how many rounds did you got?')) 
+    if(inpt > 0 && inpt <= 50){
+        var grades = 0;
+        
+        for(rounds <= 20){
+            
+        }
+    }
+}
+rounds()
 </script>
 </html>
