--- a/tommyDay26/1-求偶数个数.html
+++ b/tommyDay26/1-求偶数个数.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Document</title>
-</head>
-<body>
-
-</body>
-<script type="text/javascript">
-// 求1~n(n>=1)之间的所有偶数的个数
-</script>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
+  <body></body>
+  <script type="text/javascript">
+    // 求1~n(n>=1)之间的所有偶数的个数
+    function even(n) {
+      var count = 0;
+      for (var i = 1; i <= n; i++) {
+        if (n>0 && i%2 == 0) {
+          count++;
+        }
+      }
+        return count;
+    }
+  
+    console.log(even(10))
+  </script>
 </html>
