--- a/tommyDay26/7-两个数字的数学运算.html
+++ b/tommyDay26/7-两个数字的数学运算.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
+  <body></body>
+  <script type="text/javascript">
+    // 编写一个函数，这个函数可以计算任意两个数的 和、差、积、商 - 要求：要有3个参数，参数1：第一个数字  参数2：第二个数字  参数3：指定的运算符号 +  -  *   /
+    function fn(num1, num2, symb) {
+      var sum;
+      switch (symb) {
+        case "+":
+          sum = num1 + num2;
+          break;
+        case "-":
+          sum = num1 - num2;
+          break;
+        case "*":
+          sum = num1 * num2;
+          break;
+        case "/":
+          sum = num1 / num2;
+          break;
+      }
+      return sum;
+    }
 
-</body>
-<script type="text/javascript">
-// 编写一个函数，这个函数可以计算任意两个数的 和、差、积、商 - 要求：要有3个参数，参数1：第一个数字  参数2：第二个数字  参数3：指定的运算符号 +  -  *   /
- 
+    // 调用模板：
+    var res = fn(1, 2, "+");
+    console.log(res); // 3
 
-// 调用模板：
-var res = fn(1,2,'+')
-console.log(res); // 3
+    var res = fn(1, 2, "/");
+    console.log(res); // 0.5
 
-var res = fn(1,2,'/')
-console.log(res); // 0.5
-
-var res = fn(1,2,'-')
-console.log(res); // -1
-</script>
+    var res = fn(1, 2, "-");
+    console.log(res); // -1
+  </script>
 </html>
