--- a/tommyDay26/5-体重.html
+++ b/tommyDay26/5-体重.html
@@ -14,20 +14,23 @@
       var height = parseFloat(prompt("please input your height"));
       var weight = parseFloat(prompt("please input your weight"));
       var standard;
+      var result;
       if (sex == 1) {
-        standard = height - weight - 100;
-        if (standard < -3) {
+        standard = height - 100;
+        result =  weight - standard;
+        if (result < -3) {
           alert("you are thin !");
-        } else if (standard > 3) {
+        } else if (result > 3) {
           alert("you are fat !");
         } else {
           alert("you are standard!");
         }
       } else if (sex == 2) {
-        standard = height - weight - 110;
-        if (standard < -3) {
+        standard = height  - 110;
+        result =  weight - standard;
+        if (result < -3) {
           alert("you are thin !");
-        } else if (standard > 3) {
+        } else if (result > 3) {
           alert("you are fat !");
         } else {
           alert("you are standard!");
