--- a/tommyDay28/1-数组去重.html
+++ b/tommyDay28/1-数组去重.html
@@ -10,5 +10,18 @@
 <script type="text/javascript">
 //  编写函数norepeat(arr) 将数组的重复元素去掉，并返回新的数组
 var arr = [1,2,3,4,5,3,6,7,3,2];
+
+function norepeat(arr) {
+    arr = arr.sort()
+    var newArr = [];
+    for(var i = 0; i <= arr.length; i++){
+       if(arr[i] != arr[i+1]){
+           newArr.push(arr[i])
+       }
+    }
+    return newArr;
+  }
+
+  console.log(norepeat(arr))
 </script>
 </html>
