--- a/tommyDay28/2-连续存数.html
+++ b/tommyDay28/2-连续存数.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
+  <body></body>
+  <script type="text/javascript">
+    // 定义一个含有30个整型元素的数组，按顺序分别赋予从2开始的偶数；然后按顺序每五个数求出一个平均值，放在另一个数组中并输出。试编程。
+    var arr = [];
+    function fn(arr) {
+      for (num = 1; num <= 30; num++) {
+        arr.push(num * 2);
+      }
+      return arr;
+    }
+    fn(arr);
+    var newArr = [];
+    var sum = 0;
+    var index = 1;
+    console.log(arr.length);
+    for (var i = 0; i < arr.length; i++) {
+      sum += arr[i];
+      if (index == 5) {
+        newArr.push(sum / 5);
+        index = 1;
+        sum = 0;
+      }
+      index++;
+    }
 
-</body>
-<script type="text/javascript">
-// 定义一个含有30个整型元素的数组，按顺序分别赋予从2开始的偶数；然后按顺序每五个数求出一个平均值，放在另一个数组中并输出。试编程。
-</script>
+    console.log(newArr);
+  </script>
 </html>
