--- a/tommyDay28/3-左下半三角.html
+++ b/tommyDay28/3-左下半三角.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Document</title>
-</head>
-<body>
-
-</body>
-<script type="text/javascript">
-// 通过循环按行顺序为一个5×5的二维数组a赋1到25的自然数，然后输出该数组的左下半三角。试编程。
-</script>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
+  <body></body>
+  <script type="text/javascript">
+    // 通过循环按行顺序为一个5×5的二维数组a赋1到25的自然数，然后输出该数组的左下半三角。试编程。
+    var arr = [];
+    for (var i = 1; i <= 25; ) {
+      var tmp = [];
+      for (var j = 1; j <= 5; j++) {
+        tmp.push(i);
+        i++;
+      }
+      arr.push(tmp);
+    }
+    for (var i = 0; i < arr.length; i++) {
+      for (var j = 0; j <= i; j++) {
+        document.write(arr[i][j] + "&nbsp;");
+      }
+      document.write("<br>");
+    }
+  </script>
 </html>
