--- a/tommyDay28/6-map.html
+++ b/tommyDay28/6-map.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
+  <body></body>
+  <script type="text/javascript">
+    // 编写函数map(arr) 把数组中的每一位数字都增加30%
+    var arr2 = [1, 2, 3, 4, 5];
+    function map(arr) {
+      var newArr = [];
+      var result = 0;
+      for (var i = 0; i < arr.length; i++) {
+         result = arr[i]*1.3
+        newArr.push(result.toFixed(2));
+      }
+      return newArr;
+    }
+   console.log(map(arr2)) ;
 
-</body>
-<script type="text/javascript">
-// 编写函数map(arr) 把数组中的每一位数字都增加30%
-</script>
+  </script>
 </html>
