--- a/tommyDay28/7-插入数组.html
+++ b/tommyDay28/7-插入数组.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
+  <body></body>
+  <script type="text/javascript">
+    // 有一个从小到大排好序的数组。现输入一个数，要求按原来的规律将它插入数组中。
+    var arr1 = [1, 2, 3, 4, 5];
+    function add(arr) {
+      var input = parseInt(
+        prompt("what number do you want to add in the array")
+      );
 
-</body>
-<script type="text/javascript">
-// 有一个从小到大排好序的数组。现输入一个数，要求按原来的规律将它插入数组中。
-</script>
+      arr.push(input);
+      arr.sort();
+
+      return arr;
+    }
+    alert(add(arr1));
+  </script>
 </html>
