--- a/tommyDay29/1-反转单词.html
+++ b/tommyDay29/1-反转单词.html
@@ -9,6 +9,12 @@
 </body>
 <script type="text/javascript">
 // 反转单词
-var str = 'I Love You';
+var str = 'I Love You'; 
+var newArr = str.split(' ')
+var str2 = '';
+for(var i = newArr.length - 1; i >= 0; i--){
+    str2 += ' '+ newArr[i]
+}
+console.log(str2);
 </script>
 </html>
