--- a/tommyDay29/2-混合验证码.html
+++ b/tommyDay29/2-混合验证码.html
@@ -9,5 +9,12 @@
 </body>
 <script type="text/javascript">
 // 数字字母混合验证码
+var arr = [1,2,3,4,5,6,7,'a','b','c','d','e','f','g']
+var result = '';
+var n = parseInt(prompt('how many numbers should in the code'))
+for(var i = 0; i < n; i++){
+    result += arr[Math.ceil(Math.random()*arr.length)]
+    }
+console.log(result)
 </script>
 </html>
