--- a/tommyDay29/8-限制后缀.html
+++ b/tommyDay29/8-限制后缀.html
@@ -11,5 +11,18 @@
 <script type="text/javascript">
 // 需求：假设上传商品图片的应用场景，需要判断上传文件后缀是图片类型。
 var allowSuffixArr = ["jpg","md"];
+btn.onclick = function () {
+    var filename =image.value ;
+    var filenameArr = filename.split('.');
+    var suffix = filenameArr[filenameArr.length-1];
+    var flag = false;
+    for(var i in allowSuffixArr){
+        if(suffix == allowSuffixArr[i]){
+            flag = true;
+            break;
+        }
+    }
+    console.log(flag)
+  }
 </script>
 </html>
