--- a/tommyDay30/1-获取随机颜色值.html
+++ b/tommyDay30/1-获取随机颜色值.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-    <input type="text" id="text">
-</body>
-<script>
-    // 编写一个函数，获得一个十六进制的随机颜色的字符串(例如：#20CD4F)
-</script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      .box {
+        width: 200px;
+        height: 200px;
+        border: 1px solid #333;
+        background-color: #fff;
+      }
+    </style>
+  </head>
+  <body>
+    <input type="text" id="text" />
+    <div class="box"></div>
+    <button class="btn">get color code</button>
+  </body>
+  <script>
+      // 编写一个函数，获得一个十六进制的随机颜色的字符串(例如：#20CD4F)
+      var btn = document.querySelector('.btn');
+      var box = document.querySelector('.box')
+  var input = document.querySelector('#text')
+    btn.onclick =  function fn() {
+      var color = "1,2,3,4,5,6,7,8,9,0,a,b,c,d,e,f";
+      var colorArray = color.split(",");
+      var newColor = "#";
+      for (var i = 0; i < 6; i++) {
+        newColor += colorArray[Math.floor(Math.random() * 16)];
+      }
+      box.style.backgroundColor = newColor;
+      input.value = newColor
+    }
+  </script>
 </html>
